// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LineScaleParty> <LineScaleParty> Mount: enzyme.mount 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-0 > div:nth-child(2n-1),
[data-css-0] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<LineScaleParty
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
    <div />
    <div />
  </div>
</LineScaleParty>
`;

exports[`<LineScaleParty> <LineScaleParty> Render: enzyme.render 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-0 > div:nth-child(2n-1),
[data-css-0] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`<LineScaleParty> <LineScaleParty> Shallow: enzyme.shallow 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-0 > div:nth-child(2n-1),
[data-css-0] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
</div>
`;
